Fix style of `more-visible-remaining-time`

--- a/app/src/quiz/more-visible-remaining-time/style.css
+++ b/app/src/quiz/more-visible-remaining-time/style.css
@@ -8,4 +8,5 @@
     padding: 10px !important;
     z-index: 2147483647 !important;
     pointer-events: none !important;
+    border: none !important;
 }
